--- a/mc-dorm-mod.Rmd
+++ b/mc-dorm-mod.Rmd
@@ -24,11 +24,11 @@ source("make_landscape.R")
 ```{r}
 set.seed(47405)
 
-tsteps <- 100      # Number of time steps in model
+tsteps <- 1000      # Number of time steps in model
 dt <- 1    # precision for euler method integration
 
 S <- 20 # Number of species
-M <- 100 # Number of sites
+M <- 10 # Number of sites
 
 ```
 
@@ -58,6 +58,7 @@ plot(mc.weighted[[1]], coords, col = adjustcolor("black", alpha.f = 0.1), add = 
 
 ### Define parameters
 ```{r}
+
 # density independent growth
 max.growth <- runif(S) + 1
 # optimal env conditions
@@ -72,88 +73,76 @@ sig.comp <- rgamma(S, shape = nb.spec, scale = nb.var)
 d.cctradeoff <- function(max.growth, strength = 0.5){
   -max.growth*strength + abs(min(-max.growth*strength))
 }
-d <- d.cctradeoff(0.9)
+# d <- 0.01
 
 # beverton-holt alpha
-a <- 1e-3
+a <- 3e-3
 
 ```
 
 ### Define model
 ```{r}
-
-# initialize result array, Species X Sites X Time 
-results.N <- array(NA, c(S, M, tsteps), 
-                   dimnames = list(c(paste0("sp",1:S)), c(paste0("site",1:M)), c(1:tsteps)))
-results.D <- array(NA, c(S, M, tsteps),
-                   dimnames = list(c(paste0("sp",1:S)), c(paste0("site",1:M)), c(1:tsteps)))
-
-results.N[,,1] <- matrix(rpois(M*S, 1), nrow = S, ncol = M)
-results.D[,,1] <- A*0
-
-
-R.jx <- function(env.xy, max.growth, o.comp, sig.comp){
-  max.growth * exp(-((env.xy - o.comp)^2/(2*sig.comp^2)))
-}
-
-competition <- function(N,a) {
-	return( 1 / ( 1 + a*(sum(N))))
-}
-
-disperse <- function(d, N, M){
-  d*((rowSums(N) - N) / (M-1) - N)
-}
-
-for(t in 1:(tsteps / dt - 1)){
-  # Init or update progress bar
-  if(t == 1) pb <- progress_bar$new(total = (tsteps / dt), force = T)
-  pb$update(ratio = t/(tsteps / dt))
+run_sim <- function(d){
   
-  N.t <- results.N[,,t]
-  D.t <- results.D[,,t]
   
-  # calculates growth rates for each species (rows) in each site (cols)
-  # dimensions = S x M
-  R.t <- apply(X = env, MARGIN = 1, FUN = R.jx, max.growth, o.comp, sig.comp)
+  # initialize result array, Species X Sites X Time 
+  results.N <- array(NA, c(S, M, tsteps), 
+                     dimnames = list(c(paste0("sp",1:S)), c(paste0("site",1:M)), c(1:tsteps)))
+  results.D <- array(NA, c(S, M, tsteps),
+                     dimnames = list(c(paste0("sp",1:S)), c(paste0("site",1:M)), c(1:tsteps)))
   
-  # calculate competition at this time
-  comp.t <- apply(N.t, MARGIN = 2, FUN = competition, a = a)
-  N.t0 <- R.t * N.t * comp.t
+  results.N[,,1] <- matrix(rpois(M*S, 1), nrow = S, ncol = M)
+  results.D[,,1] <- matrix(0, nrow = S, ncol = M)
   
-  N.t1 <- N.t0 + disperse(d = d, N = N.t0, M = M)
   
-  results.N[,,t+1] <- ifelse(N.t1 > 1, N.t1, 0)
-  results.D[,,t+1] <- 0
+  R.jx <- function(env.xy, max.growth, o.comp, sig.comp){
+    max.growth * exp(-((env.xy - o.comp)^2/(2*sig.comp^2)))
+  }
+  
+  competition <- function(N,a) {
+  	return( 1 / ( 1 + a*(sum(N))))
+  }
+  
+  disperse <- function(d, N, M){
+    d*((rowSums(N) - N) / (M-1) - N)
+  }
+  
+  for(t in 1:(tsteps / dt - 1)){
+    # Init or update progress bar
+    if(t == 1) pb <- progress_bar$new(total = (tsteps / dt), force = T)
+    pb$update(ratio = t/(tsteps / dt))
+    
+    N.t <- results.N[,,t]
+    D.t <- results.D[,,t]
+    
+    # calculates growth rates for each species (rows) in each site (cols)
+    # dimensions = S x M
+    R.t <- apply(X = env, MARGIN = 1, FUN = R.jx, max.growth, o.comp, sig.comp)
+    
+    # calculate competition at this time
+    comp.t <- apply(N.t, MARGIN = 2, FUN = competition, a = a)
+    N.t0 <- R.t * N.t * comp.t
+    
+    N.t1 <- N.t0 + disperse(d = d, N = N.t0, M = M)
+    
+    results.N[,,t+1] <- ifelse(N.t1 > 1, N.t1, 0)
+    results.D[,,t+1] <- 0
+  }
+  
+  alpha <- mean(specnumber(t(results.N[,,tsteps])))
+  gamma <- sum(rowSums(results.N[,,t]) > 0)
+  beta <- gamma / alpha
+  return(cbind(dispersal = d, alpha = alpha, beta = beta, gamma = gamma))
+  #return(results.N[,,tsteps])
 }
 
-for(t in 1:tsteps){
-  richness.dynamics[t,] <- as.vector(specnumber(t(results.N[,,t])))
-}
 
-gamma.dynamics <- vector(length = tsteps)
-for(t in 1:tsteps){
-  gamma.dynamics[t] <- sum(rowSums(results.N[,,t]) > 0)
-}
-
-diversity.dynamics <- data.frame(time = seq(1, tsteps), mean_alpha = rowMeans(richness.dynamics), gamma = gamma.dynamics)
-
-
-diversity.dynamics %>% gather(mean_alpha, gamma, key = "scale", value = "diversity") %>% 
-  ggplot(aes(x = time, y = diversity, color = scale)) + 
-  geom_point() + 
-  geom_line()
 ```
 
 ### plot model output
 ```{r}
-# z1 <- apply(results.N, 3L, c)
-# z2 <- expand.grid(dimnames(results.N)[1:2])
-# data.frame(z2, z1)
-# results.df <- as.data.frame.table(results.N)
-# colnames(results.df) <- c("species", "site", "time", "abundance")
-# 
-# richness.dynamics <- matrix(NA, ncol = M, nrow = tsteps)
-# colnames(richness.dynamics) <- paste0("site",1:M)
+richness.dynamics <- matrix(NA, ncol = M, nrow = tsteps)
+colnames(richness.dynamics) <- paste0("site",1:M)
 
 for(t in 1:tsteps){
   richness.dynamics[t,] <- as.vector(specnumber(t(results.N[,,t])))
@@ -164,15 +153,55 @@ for(t in 1:tsteps){
   gamma.dynamics[t] <- sum(rowSums(results.N[,,t]) > 0)
 }
 
-diversity.dynamics <- data.frame(time = seq(1, tsteps), mean_alpha = rowMeans(richness.dynamics), gamma = gamma.dynamics)
+diversity.dynamics <- data.frame(time = seq(1, tsteps), alpha = rowMeans(richness.dynamics), gamma = gamma.dynamics)
 
-
-diversity.dynamics %>% gather(mean_alpha, gamma, key = "scale", value = "diversity") %>% 
+diversity.dynamics %>% 
+  mutate(beta = gamma/alpha) %>% 
+  gather(alpha, beta, gamma, key = "scale", value = "diversity") %>% 
   ggplot(aes(x = time, y = diversity, color = scale)) + 
   geom_point() + 
   geom_line()
-  
 ```
 
 
+```{r}
+nsims <- 100
+running.out <- matrix(NA, ncol = 4)
+for(i in 1:nsims){
+  print(paste("Simulation",i,"of",nsims,"."))
+  # update params
+  # density independent growth
+  max.growth <- runif(S) + 1
+  # optimal env conditions
+  o.comp <- runif(S, min = range(env)[1], max = range(env)[2])
+  # niche breadths, 
+  # low nb.spec = more specialists, high nb.spec = more generalists
+  # low nb.var = most species follow nb.spec, high nb.var = greater mix of species strategies
+  nb.spec <- 1
+  nb.var <- 2
+  sig.comp <- rgamma(S, shape = nb.spec, scale = nb.var)
+  
+  # set up dispersal vector
+  d.list <- list(0, 0.000001, 0.00001, 0.0001, 0.001, 0.01, 0.1, 0.5, 0.75, 1)
+  out <- lapply(d.list, FUN = run_sim)
+  out <- matrix(unlist(out), ncol = 4, byrow = T)
+  running.out <- rbind(running.out,out)
+}
+
+# d.list <- list(0, 0.000001, 0.00001, 0.0001, 0.001, 0.01, 0.1, 0.5, 0.75, 0.9, 1)
+# out <- lapply(d.list, FUN = run_sim)
+# out <- matrix(unlist(out), ncol = 4, byrow = T)
+colnames(running.out) <- c("dispersal", "alpha", "beta", "gamma")
+running.out %>% as_tibble() %>% 
+  gather(alpha, beta, gamma, key = "scale", value = "diversity") %>%
+  group_by(dispersal, scale) %>% 
+  mutate(mean_div = mean(diversity), se = sd(diversity)/n()) %>% 
+  ggplot(aes(x = dispersal, y = mean_div, color = scale)) + 
+  geom_point(alpha = 0.5, size = 2) + 
+  geom_errorbar(aes(ymin = mean_div - se, ymax = mean_div + se)) +
+  geom_line(alpha = 0.5) +
+  theme_minimal() +
+  #facet_grid(scale ~ .) +
+  scale_x_log10()
+```
 
